Add Account page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Frontend pour API Authentification</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="container">
+	<div id="sign">
 		<form class="signUp">
 			<h3>Créer votre compte</h3>
 			<p>Entrez simplement votre adresse e-mail et votre mot de passe.</p>
@@ -27,6 +27,8 @@
 			<button class="form-btn dx" type="submit" title="Connexion">Se connecter</button>
 		</form>
 	</div>
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script><script  src="./script.js"></script>
+
+	<div id="account"></div>
+	<script src="index.js"></script>
 </body>
 </html>
