--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="message"></div>
-	
+
 	<div id="sign">
 		<form id="signUp" class="signUp" method="post">
 			<h3>Créer votre compte</h3>
@@ -34,13 +34,16 @@
 		<form id="accountForm" method="post">
 			<div id="menu">
 				<h2>Profil</h2>
-				<button id="btnExit">Exit</button>
+				<div>
+					<button class="btn" id="btnDelete">Supprimer</button>
+					<button class="btn" id="btnExit">Exit</button>
+				</div>
 			</div>
 			<div class="col-12">
 				<p id="msg"></p>
 			</div>
 			<div class="col-6">
-				<div id="img-preview"><img src="/images/avatar_default.jpg" /></div>
+				<div id="img-preview"><img id="avatar" src="/images/avatar_default.jpg" /></div>
 				<label for="avatar">Choisissez votre Avatar</label>
 				<input type="file" accept="image/*" name="avatar" id="avatar">
 			</div>
