--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,18 +41,18 @@
 			</div>
 			<div class="col-12">
 				<p id="msg"></p>
-			</div>
+			</div><!--
+			 <div class="col-6">
+				 <div id="img-preview"><img id="avatar" src="/images/avatar_default.jpg" /></div>
+				 <label for="avatar">Choisissez votre Avatar</label>
+				 <input type="file" accept="image/*" name="avatar" id="avatar">
+			 </div> -->
 			<div class="col-6">
-				<div id="img-preview"><img id="avatar" src="/images/avatar_default.jpg" /></div>
-				<label for="avatar">Choisissez votre Avatar</label>
-				<input type="file" accept="image/*" name="avatar" id="avatar">
-			</div>
-			<div class="col-6">
-				<input type="text" name="first_name" id="first_name" placeholder="Prénom" required>
-				<input type="text" name="last_name" id="last_name" placeholder="Nom" required>
+				<input type="text" name="firstname" id="firstname" placeholder="Prénom" required>
+				<input type="text" name="lastname" id="lastname" placeholder="Nom" required>
 				<input type="email" name="email" id="email" placeholder="E-Mail" required>
 				<textarea name="bio" id="bio" cols="30" rows="10" placeholder="Bio"></textarea>
-				<input type="submit" onClick="sendForm()" value="Enregistrer">
+				<input type="submit" value="Enregistrer">
 			</div>
 		</form>
 	</div>
