--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,27 +45,7 @@
 				<p id="msg"></p>
 			</div>
 
-			<div id="accountEdit">
-				<!--
-				  <div class="col-6">
-						<div id="img-preview"><img id="avatar" src="/images/avatar_default.jpg" /></div>
-						<label for="avatar">Choisissez votre Avatar</label>
-						<input type="file" accept="image/*" name="avatar" id="avatar">
-					</div>
-					-->
-				<div class="col-6">
-					<form id="accountForm" method="post">
-						<input type="text" name="firstname" id="firstname" placeholder="Prénom" required>
-						<input type="text" name="lastname" id="lastname" placeholder="Nom" required>
-						<input type="email" name="email" id="email" placeholder="E-Mail" required>
-						<textarea name="bio" id="bio" cols="30" rows="10" placeholder="Bio"></textarea>
-						<input type="submit" value="Enregistrer">
-					</form>
-				</div>
-			</div>
-
-			<div id="accountRead"></div>
-
+			<div id="accountProfil"></div>
 		</div>
 	</div>
 
