--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="fr" >
 <head>
   <meta charset="UTF-8">
-  <title>Frontend pour API Authentification</title>
+  <title>Frontend pour l'API d'Authentification</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 </head>
